🎨 fix gauges overflow from block

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1302,8 +1302,24 @@
 	}
 
 	> .content {
+		position: relative;
 		flex-grow: 1;
 		padding: 1rem;
+
+		&.fixed {
+			display: grid;
+			place-items: center;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+
+			> .inner {
+				position: absolute;
+				width: fit-content;
+				transform-origin: center;
+				overflow: hidden;
+			}
+		}
 	}
 }
 
